text-align fix

--- a/src/vlab/WEB/css/dev/Lab_dynamic_viscosity_style.css
+++ b/src/vlab/WEB/css/dev/Lab_dynamic_viscosity_style.css
@@ -1,5 +1,5 @@
 .vlab_setting {
-    width: 800px;
+    width: 830px;
     height: 730px;
     border: 2px solid #3d4652;
     margin: 10px;
@@ -13,7 +13,6 @@
     justify-content: space-between;
     align-items: flex-start;
     overflow: auto;
-    position: relative;
 }
 
 .block_title {
@@ -25,6 +24,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    text-align: left;
 }
 
 .block_title input {
@@ -33,6 +33,7 @@
 
 .block_title .vlab_name {
     display: inline-block;
+    text-align: left;
 }
 
 .block_viscosity_plot {
@@ -63,8 +64,9 @@
     align-content: space-around;
 }
 
-.block_control > div {
+.block_control > div, .block_control > label {
     width: 100%;
+    text-align: left;
 }
 
 .block_control .value, .block_tube_installation .value, .tube_installation_control .value {
@@ -84,6 +86,7 @@
     justify-content: center;
     flex-wrap: wrap;
     align-content: space-around;
+    overflow-x: auto;
 }
 
 .block_viscosity_table table {
@@ -137,6 +140,7 @@
 
 .tube_installation_control > div {
     width: 40%;
+    text-align: left;
 }
 
 .tube_installation_control > div:nth-child(2) {
